--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">DemoAndroidProject1</string>
     <string name="email_hint">Type email address</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="Password_hint">Type your password</string>
 </resources>
